<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BTN0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTN0"
                android:text="@string/button0"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/BTN1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTN1"
                android:text="@string/button1"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/BTN2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTN2"
                android:text="@string/button2"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/BTN3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTN3"
                android:text="@string/button3"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BTN4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTN4"
                android:text="@string/button4"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/BTN5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTN5"
                android:text="@string/button5"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/BTN6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTN6"
                android:text="@string/button6"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/BTN7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTN7"
                android:text="@string/button7"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BTN8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTN8"
                android:text="@string/button8"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/BTN9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTN9"
                android:text="@string/button9"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/BTNPoint"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNPoint"
                android:text="@string/buttonPoint"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/BTNBackspace"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNBackspace"
                android:text="@string/buttonBackspace"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BTNc"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNc"
                android:text="@string/buttonC"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/BTNSqrt"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNSqrt"
                android:text="@string/buttonSqrt"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/BTNSignChange"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNSignChange"
                android:text="@string/buttonSignChange"
                android:textColor="@color/black"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BTNMul"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNMul"
                android:text="@string/buttonMul"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/BTNDiv"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNDiv"
                android:text="@string/buttonDiv"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/BTNAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="BTNAdd"
                android:text="@string/buttonAdd"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/BTNSub"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:onClick="BTNSub"
                android:text="@string/buttonSub" />

        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BTNEql"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="BTNEql"
        android:text="@string/buttonEql"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>